--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     </div>
                 </aside>
             </a>
-            <a href="https://divyanshi-varshney2002.github.io/Web-Development/html/Calculator.html" target="_blank">
+            <a href="./Divyanshi Varshney/Calculator/code.html" target="_blank">
                 <aside>
                     <div class="im"><img src="./images/Calculator.jpg" alt="Calculator" height="100%" width="100%">
                     </div>
@@ -199,7 +199,7 @@
                     </div>
                 </main>
             </a>
-            <a href="https://divyanshi-varshney2002.github.io/Web-Development/html/weather.html" class="w" target="_blank">
+            <a href="./Divyanshi Varshney/Weather app/code.html" class="w" target="_blank">
                 <main>
                     <div class="quiz"><img src="./images/weather.png" alt="Weather App Image" height="100%" width="100%">
                     </div>
