--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./styles/template.css">
-    <link rel="stylesheet" href="./styles/image-carousel.css">
-    <link rel="shortcut icon" href="./images/sunnyPlant.png" type="image/x-icon">
-    <link rel="stylesheet" href="./styles/contactus.css">
-    <link rel="stylesheet" href="./styles/loader.css">
-    <link rel="stylesheet" href="./styles/footer.css">
+    <link rel="stylesheet" href="./Anikate Agrawal/styles/template.css">
+    <link rel="stylesheet" href="./Anikate Agrawal/styles/image-carousel.css">
+    <link rel="shortcut icon" href="./Anikate Agrawal/images/sunnyPlant.png" type="image/x-icon">
+    <link rel="stylesheet" href="./Anikate Agrawal/styles/contactus.css">
+    <link rel="stylesheet" href="./Anikate Agrawal/styles/loader.css">
+    <link rel="stylesheet" href="./Anikate Agrawal/styles/footer.css">
     <title>Group Project</title>
 </head>
 
@@ -34,7 +34,7 @@
                 <li><a href="#team">Team</a></li>
                 <li><a href="#webapps">Web Apps</a></li>
                 <li><a href="#webtech">Technologies</a></li>
-                <li><a href="https://agrawaldisha.github.io/WebDev/html/flexboxphotogallery.html" target="_blank">Gallery</a></li>
+                <li><a href="./disha_flexboxgallerygla/flexboxphotogallery.html" target="_blank">Gallery</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -45,7 +45,7 @@
                 <li><a href="#team">Team</a></li>
                 <li><a href="#webapps">Web Apps</a></li>
                 <li><a href="#webtech">Technologies</a></li>
-                <li><a href="https://agrawaldisha.github.io/WebDev/html/flexboxphotogallery.html" target="_blank">Gallery</a></li>
+                <li><a href="./disha_flexboxgallerygla/flexboxphotogallery.html" target="_blank">Gallery</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="bar"><i class="fa-solid fa-bars"></i></div>
@@ -57,16 +57,16 @@
                 <button class="btn" id="btn1"><</button>
                         <button class="btn" id="btn2">></button>
                         <div class="carousel">
-                            <div class="image main" id="i0"><img class="i" src="./images/introduction.png" alt="HTML">
+                            <div class="image main" id="i0"><img class="i" src="./Anikate Agrawal/images/introduction.png" alt="HTML">
                                 <p>HTML 5</p>
                             </div>
-                            <div class="image " id="i1"><img class="i" src="./images/css.png" alt="CSS">
+                            <div class="image " id="i1"><img class="i" src="./Anikate Agrawal/images/css.png" alt="CSS">
                                 <p>CSS 3</p>
                             </div>
-                            <div class="image " id="i2"><img class="i" src="./images/java-script.jpg" alt="Java Script">
+                            <div class="image " id="i2"><img class="i" src="./Anikate Agrawal/images/java-script.jpg" alt="Java Script">
                                 <p>Java Script</p>
                             </div>
-                            <div class="image " id="i3"><img class="i" src="./images/bootstrap.png" alt="Bootstrap">
+                            <div class="image " id="i3"><img class="i" src="./Anikate Agrawal/images/bootstrap.png" alt="Bootstrap">
                                 <p>Bootstrap 5</p>
                             </div>
                         </div>
@@ -75,43 +75,43 @@
         <h1 class="heading" id="team">Team Members</h1>
         <section id="sec1">
             <a href="https://divyanshi-varshney2002.github.io/My-Resume/" target="_blank">
-                <div class="team" target="_blank"><img class="p" src="./images/Divyanshi (2).jpg" alt="Divyanshi Varshney"></div>
+                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Divyanshi (2).jpg" alt="Divyanshi Varshney"></div>
                 <p>Divyanshi Varshney</p>
             </a>
             <a href="https://anikateagrawal.github.io/My-Resume/" target="_blank">
-                <div class="team" target="_blank"><img class="p" src="./images/Anikate (2).jpg" alt="Anikate Agrawal"></div>
+                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Anikate (2).jpg" alt="Anikate Agrawal"></div>
                 <p>Anikate Agrawal</p>
             </a>
             <a href="https://aasthagoyal09.github.io/Resume/" target="_blank">
-                <div class="team" target="_blank"><img class="p" src="./images/aastha.png" alt="Aastha Goyal"></div>
+                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/aastha.png" alt="Aastha Goyal"></div>
                 <p>Aastha Goyal</p>
             </a>
             <a href="https://chhaya7817.github.io/Resume/" target="_blank">
-                <div class="team" target="_blank"><img class="p" src="./images/Chhaya.jpg" alt="Chhaya Chaudhary"></div>
+                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Chhaya.jpg" alt="Chhaya Chaudhary"></div>
                 <p>Chhaya Chaudhary</p>
             </a>
             <a href="https://123moni-source.github.io/Resume/" target="_blank">
-                <div class="team" target="_blank"><img class="p" src="./images/Monishka.jpg" alt="Monishka Singh"></div>
+                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Monishka.jpg" alt="Monishka Singh"></div>
                 <p>Monishka Singh</p>
             </a>
             <a href="https://gurshaagrawal.github.io/" target="_blank">
-                <div class="team" target="_blank"><img class="p" src="./images/Gursha.jpg" alt="Gursha Agrawal"></div>
+                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Gursha.jpg" alt="Gursha Agrawal"></div>
                 <p>Gursha Agrawal</p>
             </a>
             <a href="https://anwesha294.github.io/resume.github.io/" target="_blank">
-                <div class="team" target="_blank"><img class="p" src="./images/Anwesha.jpg" alt="Anwesha Roy"></div>
+                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Anwesha.jpg" alt="Anwesha Roy"></div>
                 <p>Anwesha Roy</p>
             </a>
             <a href="https://agrawaldisha.github.io/resume/" target="_blank">
-                <div class="team" target="_blank"><img class="p" src="./images/Disha (2).jpg" alt="Disha Agrawal"></div>
+                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Disha (2).jpg" alt="Disha Agrawal"></div>
                 <p>Disha Agrawal</p>
             </a>
         </section>
         <h1 class="heading" id="webapps">Web Apps</h1>
         <section id="sec2">
-            <a href="./quizapp/index.html" class="w" target="_blank">
+            <a href="./Anikate Agrawal/quizapp/index.html" class="w" target="_blank">
                 <main>
-                    <div class="quiz"><img src="./images/quizimg.png" alt="Quiz Image" height="100%" width="100%">
+                    <div class="quiz"><img src="./Anikate Agrawal/images/quizimg.png" alt="Quiz Image" height="100%" width="100%">
                     </div>
                     <div class="info">
                         <dl>
@@ -125,7 +125,7 @@
             <article>
                 <a href="https://123moni-source.github.io/To-do-list/" target="_blank">
                 <aside>
-                    <div class="im"><img src="./images/todolist.jpg" alt="To Do List" height="100%" width="100%">
+                    <div class="im"><img src="./Anikate Agrawal/images/todolist.jpg" alt="To Do List" height="100%" width="100%">
                     </div>
                     <div class="rinfo">
                         <dl>
@@ -137,7 +137,7 @@
             </a>
             <a href="./Divyanshi Varshney/Calculator/code.html" target="_blank">
                 <aside>
-                    <div class="im"><img src="./images/Calculator.jpg" alt="Calculator" height="100%" width="100%">
+                    <div class="im"><img src="./Anikate Agrawal/images/Calculator.jpg" alt="Calculator" height="100%" width="100%">
                     </div>
                     <div class="rinfo">
                         <dl>
@@ -149,7 +149,7 @@
             </a>
             <a href="https://chhaya7817.github.io/Live-clock/" target="_blank">
                 <aside>
-                    <div class="im"><img src="./images/clock.avif" alt="Clock" height="100%" width="100%">
+                    <div class="im"><img src="./Anikate Agrawal/images/clock.avif" alt="Clock" height="100%" width="100%">
                     </div>
                     <div class="rinfo">
                         <dl>
@@ -161,7 +161,7 @@
             </a>
             <a href="https://anwesha294.github.io/sw2.github.io/" target="_blank">
                 <aside>
-                    <div class="im"><img src="./images/stopwatch.png" alt="Clock" height="100%" width="100%">
+                    <div class="im"><img src="./Anikate Agrawal/images/stopwatch.png" alt="Clock" height="100%" width="100%">
                     </div>
                     <div class="rinfo">
                         <dl>
@@ -177,7 +177,7 @@
         <section id="sec3">
             <a href="https://chhaya7817.github.io/Maths-Game/"  target="_blank">
                 <main>
-                    <div class="quiz"><img src="./images/math.jpg" alt="Math Image" height="100%" width="100%">
+                    <div class="quiz"><img src="./Anikate Agrawal/images/math.jpg" alt="Math Image" height="100%" width="100%">
                     </div>
                     <div class="info">
                         <dl>
@@ -189,7 +189,7 @@
             </a>
             <a href="https://123moni-source.github.io/Website/" class="w" target="_blank">
                 <main>
-                    <div class="quiz"><img src="./images/covid.jpg" alt="Covid Image" height="100%" width="100%">
+                    <div class="quiz"><img src="./Anikate Agrawal/images/covid.jpg" alt="Covid Image" height="100%" width="100%">
                     </div>
                     <div class="info">
                         <dl>
@@ -201,7 +201,7 @@
             </a>
             <a href="./Divyanshi Varshney/Weather app/code.html" class="w" target="_blank">
                 <main>
-                    <div class="quiz"><img src="./images/weather.png" alt="Weather App Image" height="100%" width="100%">
+                    <div class="quiz"><img src="./Anikate Agrawal/images/weather.png" alt="Weather App Image" height="100%" width="100%">
                     </div>
                     <div class="info">
                         <dl>
@@ -213,7 +213,7 @@
             </a>
             <a href="../Mario-Level-1-master/index.html" class="w" target="_blank">
                 <main>
-                    <div class="quiz"><img src="./images/mario.webp" alt="Mario Image" height="100%" width="100%">
+                    <div class="quiz"><img src="./Anikate Agrawal/images/mario.webp" alt="Mario Image" height="100%" width="100%">
                     </div>
                     <div class="info">
                         <dl>
@@ -225,7 +225,7 @@
             </a>
             <a href="https://gurshaagrawal.github.io/sudoku.github.io/" class="w" target="_blank">
                 <main>
-                    <div class="quiz"><img src="./images/sudoku.jpg" alt="sudoku Image" height="100%" width="100%">
+                    <div class="quiz"><img src="./Anikate Agrawal/images/sudoku.jpg" alt="sudoku Image" height="100%" width="100%">
                     </div>
                     <div class="info">
                         <dl>
@@ -235,9 +235,9 @@
                     </div>
                 </main>
             </a>
-            <a href="https://agrawaldisha.github.io/WebDev/html/flexboxphotogallery.html" class="w" target="_blank">
+            <a href="./disha_flexboxgallerygla/flexboxphotogallery.html" class="w" target="_blank">
                 <main>
-                    <div class="quiz"><img src="./images/gallery.webp" alt="Gallery" height="100%" width="100%">
+                    <div class="quiz"><img src="./Anikate Agrawal/images/gallery.webp" alt="Gallery" height="100%" width="100%">
                     </div>
                     <div class="info">
                         <dl>
@@ -249,7 +249,7 @@
             </a>
             <a href="https://anwesha294.github.io/muscplayer3.github.io/" class="w" target="_blank">
                 <main>
-                    <div class="quiz"><img src="./images/music.jpg" alt="Gallery" height="100%" width="100%">
+                    <div class="quiz"><img src="./Anikate Agrawal/images/music.jpg" alt="Gallery" height="100%" width="100%">
                     </div>
                     <div class="info">
                         <dl>
@@ -261,7 +261,7 @@
             </a>
             <a href="https://aasthagoyal09.github.io/WebDevelopmentProject/" class="w" target="_blank">
                 <main>
-                    <div class="quiz"><img src="./images/unit-converter.jpg" alt="Unit Converter" height="100%" width="100%">
+                    <div class="quiz"><img src="./Anikate Agrawal/images/unit-converter.jpg" alt="Unit Converter" height="100%" width="100%">
                     </div>
                     <div class="info">
                         <dl>
@@ -283,8 +283,8 @@
                 </div>
             </form>
 
-            <script type="module" src="./js/firebase.js"></script>
-            <script type="module" src="./js/contactus.js"></script>
+            <script type="module" src="./Anikate Agrawal/js/firebase.js"></script>
+            <script type="module" src="./Anikate Agrawal/js/contactus.js"></script>
         </section>
         <footer>
             <h3 style="color:red;margin-top: 20px;">&copy; copyrighted, designed and developed by Gla Students</h3>
@@ -308,9 +308,9 @@
         </div>
         </footer>
     </div>
-    <script src="./js/loader.js"></script>
-    <script src="./js/template.js"></script>
-    <script src="./js/image-carousel.js"></script>
+    <script src="./Anikate Agrawal/js/loader.js"></script>
+    <script src="./Anikate Agrawal/js/template.js"></script>
+    <script src="./Anikate Agrawal/js/image-carousel.js"></script>
 </body>
 
 </html>
