--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     </div>
                 </main>
             </a>
-            <a href="https://aasthagoyal09.github.io/WebDevelopmentProject/" class="w" target="_blank">
+            <a href="./Aastha Goyal/index.html" class="w" target="_blank">
                 <main>
                     <div class="quiz"><img src="./Anikate Agrawal/images/unit-converter.jpg" alt="Unit Converter" height="100%" width="100%">
                     </div>
