--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     </div>
                 </aside>
             </a>
-            <a href="https://chhaya7817.github.io/Live-clock/" target="_blank">
+            <a href="./Chhaya Chaudhary/Live-clock/index.html" target="_blank">
                 <aside>
                     <div class="im"><img src="./Anikate Agrawal/images/clock.avif" alt="Clock" height="100%" width="100%">
                     </div>
@@ -175,7 +175,7 @@
         </section>
         <h1 class="heading" id="webtech">Web Tech</h1>
         <section id="sec3">
-            <a href="https://chhaya7817.github.io/Maths-Game/"  target="_blank">
+            <a href="./Chhaya Chaudhary/Maths Game/index.html"  target="_blank">
                 <main>
                     <div class="quiz"><img src="./Anikate Agrawal/images/math.jpg" alt="Math Image" height="100%" width="100%">
                     </div>
