--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     </div>
                 </aside>
             </a>
-            <a href="https://anwesha294.github.io/sw2.github.io/" target="_blank">
+            <a href="./Anwesha Roy/sw2.github.io-main/index.html" target="_blank">
                 <aside>
                     <div class="im"><img src="./Anikate Agrawal/images/stopwatch.png" alt="Clock" height="100%" width="100%">
                     </div>
@@ -211,7 +211,7 @@
                     </div>
                 </main>
             </a>
-            <a href="../Mario-Level-1-master/index.html" class="w" target="_blank">
+            <a href="./Anikate Agrawal/Mario-Level-1-master/index.html" class="w" target="_blank">
                 <main>
                     <div class="quiz"><img src="./Anikate Agrawal/images/mario.webp" alt="Mario Image" height="100%" width="100%">
                     </div>
@@ -247,7 +247,7 @@
                     </div>
                 </main>
             </a>
-            <a href="https://anwesha294.github.io/muscplayer3.github.io/" class="w" target="_blank">
+            <a href="./Anwesha Roy/muscplayer3.github.io/" class="w" target="_blank">
                 <main>
                     <div class="quiz"><img src="./Anikate Agrawal/images/music.jpg" alt="Gallery" height="100%" width="100%">
                     </div>
