--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     </div>
                 </main>
             </a>
-            <a href="./Anwesha Roy/muscplayer3.github.io/" class="w" target="_blank">
+            <a href="./Anwesha Roy/music player/index.html" class="w" target="_blank">
                 <main>
                     <div class="quiz"><img src="./Anikate Agrawal/images/music.jpg" alt="Gallery" height="100%" width="100%">
                     </div>
