--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 </main>
             </a>
             <article>
-                <a href="https://123moni-source.github.io/To-do-list/" target="_blank">
+                <a href="./Monishka Singh/TO-DO LIST/index.html" target="_blank">
                 <aside>
                     <div class="im"><img src="./Anikate Agrawal/images/todolist.jpg" alt="To Do List" height="100%" width="100%">
                     </div>
@@ -187,7 +187,7 @@
                     </div>
                 </main>
             </a>
-            <a href="https://123moni-source.github.io/Website/" class="w" target="_blank">
+            <a href="./Monishka Singh/Covid-API/index.html" class="w" target="_blank">
                 <main>
                     <div class="quiz"><img src="./Anikate Agrawal/images/covid.jpg" alt="Covid Image" height="100%" width="100%">
                     </div>
