--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li><a href="#team">Team</a></li>
                 <li><a href="#webapps">Web Apps</a></li>
                 <li><a href="#webtech">Technologies</a></li>
-                <li><a href="./disha_flexboxgallerygla/flexboxphotogallery.html" target="_blank">Gallery</a></li>
+                <li><a href="./Disha Agrawal/flexboxphotogallery.html" target="_blank">Gallery</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -45,7 +45,7 @@
                 <li><a href="#team">Team</a></li>
                 <li><a href="#webapps">Web Apps</a></li>
                 <li><a href="#webtech">Technologies</a></li>
-                <li><a href="./disha_flexboxgallerygla/flexboxphotogallery.html" target="_blank">Gallery</a></li>
+                <li><a href="./Disha Agrawal/flexboxphotogallery.html" target="_blank">Gallery</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="bar"><i class="fa-solid fa-bars"></i></div>
@@ -223,7 +223,7 @@
                     </div>
                 </main>
             </a>
-            <a href="https://gurshaagrawal.github.io/sudoku.github.io/" class="w" target="_blank">
+            <a href="./Gursha Agrawal/sudoku.github.io-main/index.html" class="w" target="_blank">
                 <main>
                     <div class="quiz"><img src="./Anikate Agrawal/images/sudoku.jpg" alt="sudoku Image" height="100%" width="100%">
                     </div>
@@ -235,7 +235,7 @@
                     </div>
                 </main>
             </a>
-            <a href="./disha_flexboxgallerygla/flexboxphotogallery.html" class="w" target="_blank">
+            <a href="./Disha Agrawal/flexboxphotogallery.html" class="w" target="_blank">
                 <main>
                     <div class="quiz"><img src="./Anikate Agrawal/images/gallery.webp" alt="Gallery" height="100%" width="100%">
                     </div>
