--- a/index.html
+++ b/index.html
@@ -75,35 +75,35 @@
         <h1 class="heading" id="team">Team Members</h1>
         <section id="sec1">
             <a href="https://divyanshi-varshney2002.github.io/My-Resume/" target="_blank">
-                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Divyanshi (2).jpg" alt="Divyanshi Varshney"></div>
+                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Divyanshi.png" alt="Divyanshi Varshney"></div>
                 <p>Divyanshi Varshney</p>
             </a>
             <a href="https://anikateagrawal.github.io/My-Resume/" target="_blank">
-                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Anikate (2).jpg" alt="Anikate Agrawal"></div>
+                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Anikate.png" alt="Anikate Agrawal"></div>
                 <p>Anikate Agrawal</p>
             </a>
             <a href="https://aasthagoyal09.github.io/Resume/" target="_blank">
-                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/aastha.png" alt="Aastha Goyal"></div>
+                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Aastha.png" alt="Aastha Goyal"></div>
                 <p>Aastha Goyal</p>
             </a>
             <a href="https://chhaya7817.github.io/Resume/" target="_blank">
-                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Chhaya.jpg" alt="Chhaya Chaudhary"></div>
+                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Chhaya.png" alt="Chhaya Chaudhary"></div>
                 <p>Chhaya Chaudhary</p>
             </a>
             <a href="https://123moni-source.github.io/Resume/" target="_blank">
-                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Monishka.jpg" alt="Monishka Singh"></div>
+                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Monishka.png" alt="Monishka Singh"></div>
                 <p>Monishka Singh</p>
             </a>
             <a href="https://gurshaagrawal.github.io/" target="_blank">
-                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Gursha.jpg" alt="Gursha Agrawal"></div>
+                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Gursha.png" alt="Gursha Agrawal"></div>
                 <p>Gursha Agrawal</p>
             </a>
             <a href="https://anwesha294.github.io/resume.github.io/" target="_blank">
-                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Anwesha.jpg" alt="Anwesha Roy"></div>
+                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Anwesha.png" alt="Anwesha Roy"></div>
                 <p>Anwesha Roy</p>
             </a>
             <a href="https://agrawaldisha.github.io/resume/" target="_blank">
-                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Disha (2).jpg" alt="Disha Agrawal"></div>
+                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Disha.png" alt="Disha Agrawal"></div>
                 <p>Disha Agrawal</p>
             </a>
         </section>
