--- a/Anikate Agrawal/quizapp/index.html
+++ b/Anikate Agrawal/quizapp/index.html
@@ -14,7 +14,11 @@
         body{
             width: 100%;
             height: 100vh;
-            background-color: darksalmon;
+            background-image: url('../images/quiz.jpg');
+            background-size: cover;
+            background-position: center;
+            color: white;
+            /* filter: grayscale(2); */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -28,16 +32,37 @@
             border: none;
             font-size: 50px;
             border-radius: 20px;
-            pointer-events: none;
+            /* pointer-events: none; */
+            box-shadow: 0px 0px 5px rgb(220, 22, 22);
+            display: block;
+        }
+        button:hover{
+            box-shadow: 0px 0px 5px rgb(22, 220, 45);
+            transform: scale(1.1);
         }
         a{
+            text-decoration: none;
+            color: inherit;
             margin: 50px;
+            display: block;
+        }
+        
+        .div{
+            background-color: rgba(0, 0, 0, 0.559);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            padding: 20px;
+            border-radius: 20px;
         }
     </style>
 </head>
 <body>
+    <div class="div">
     <h1>Quiz Page</h1>
     <a href="./quiz.html" target="_blank"><button>Create</button></a>
     <a href="./quizt.html" target="_blank"><button>Play</button></a>
+</div>
 </body>
 </html>
