--- a/index.html
+++ b/index.html
@@ -90,17 +90,9 @@
                 <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Chhaya.png" alt="Chhaya Chaudhary"></div>
                 <p>Chhaya Chaudhary</p>
             </a>
-            <a href="https://123moni-source.github.io/Resume/" target="_blank">
-                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Monishka.png" alt="Monishka Singh"></div>
-                <p>Monishka Singh</p>
-            </a>
             <a href="https://gurshaagrawal.github.io/" target="_blank">
                 <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Gursha.png" alt="Gursha Agrawal"></div>
                 <p>Gursha Agrawal</p>
-            </a>
-            <a href="https://anwesha294.github.io/resume.github.io/" target="_blank">
-                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Anwesha.png" alt="Anwesha Roy"></div>
-                <p>Anwesha Roy</p>
             </a>
             <a href="https://agrawaldisha.github.io/resume/" target="_blank">
                 <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Disha.png" alt="Disha Agrawal"></div>
@@ -123,7 +115,7 @@
                 </main>
             </a>
             <article>
-                <a href="./Monishka Singh/TO-DO LIST/index.html" target="_blank">
+                <a href="./Anikate Agrawal2/TO-DO LIST/index.html" target="_blank">
                 <aside>
                     <div class="im"><img src="./Anikate Agrawal/images/todolist.jpg" alt="To Do List" height="100%" width="100%">
                     </div>
@@ -159,7 +151,7 @@
                     </div>
                 </aside>
             </a>
-            <a href="./Anwesha Roy/sw2.github.io-main/index.html" target="_blank">
+            <a href="./Anikate Agrawal3/stop_watch/index.html" target="_blank">
                 <aside>
                     <div class="im"><img src="./Anikate Agrawal/images/stopwatch.png" alt="Clock" height="100%" width="100%">
                     </div>
@@ -187,7 +179,7 @@
                     </div>
                 </main>
             </a>
-            <a href="./Monishka Singh/Covid-API/index.html" class="w" target="_blank">
+            <a href="./Anikate Agrawal2/Covid-API/index.html" class="w" target="_blank">
                 <main>
                     <div class="quiz"><img src="./Anikate Agrawal/images/covid.jpg" alt="Covid Image" height="100%" width="100%">
                     </div>
@@ -247,7 +239,7 @@
                     </div>
                 </main>
             </a>
-            <a href="./Anwesha Roy/music player/index.html" class="w" target="_blank">
+            <a href="./Anikate Agrawal3/music player/index.html" class="w" target="_blank">
                 <main>
                     <div class="quiz"><img src="./Anikate Agrawal/images/music.jpg" alt="Gallery" height="100%" width="100%">
                     </div>
@@ -294,13 +286,11 @@
                     <li><p>Divyanshi Varshney</p><p>201500233</p></li>
                     <li><p>Anikate Agrawal</p><p>201500088</p></li>
                     <li><p>Aastha Goyal</p><p>201500004</p></li>
-                    <li><p>Anwesha Roy</p><p>201500135</p></li>
                 </ul>
             </div>
             <div class="list2">
                 <ul>
                     <li><p>Chhaya Chaudhary</p><p>201500200</p></li>
-                    <li><p>Monishka Singh</p><p>201500412</p></li>
                     <li><p>Gursha Agrawal</p><p>201500259</p></li>
                     <li><p>Disha Agrawal</p><p>201500225</p></li>
                 </ul>
