--- a/index.html
+++ b/index.html
@@ -74,10 +74,6 @@
         </div>
         <h1 class="heading" id="team">Team Members</h1>
         <section id="sec1">
-            <a href="https://divyanshi-varshney2002.github.io/My-Resume/" target="_blank">
-                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Divyanshi.png" alt="Divyanshi Varshney"></div>
-                <p>Divyanshi Varshney</p>
-            </a>
             <a href="https://anikateagrawal.github.io/My-Resume/" target="_blank">
                 <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Anikate.png" alt="Anikate Agrawal"></div>
                 <p>Anikate Agrawal</p>
@@ -85,10 +81,6 @@
             <a href="https://aasthagoyal09.github.io/Resume/" target="_blank">
                 <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Aastha.png" alt="Aastha Goyal"></div>
                 <p>Aastha Goyal</p>
-            </a>
-            <a href="https://chhaya7817.github.io/Resume/" target="_blank">
-                <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Chhaya.png" alt="Chhaya Chaudhary"></div>
-                <p>Chhaya Chaudhary</p>
             </a>
             <a href="https://gurshaagrawal.github.io/" target="_blank">
                 <div class="team" target="_blank"><img class="p" src="./Anikate Agrawal/images/Gursha.png" alt="Gursha Agrawal"></div>
@@ -127,7 +119,7 @@
                     </div>
                 </aside>
             </a>
-            <a href="./Divyanshi Varshney/Calculator/code.html" target="_blank">
+            <a href="./Anikate Agrawal2/Calculator/code.html" target="_blank">
                 <aside>
                     <div class="im"><img src="./Anikate Agrawal/images/Calculator.jpg" alt="Calculator" height="100%" width="100%">
                     </div>
@@ -191,7 +183,7 @@
                     </div>
                 </main>
             </a>
-            <a href="./Divyanshi Varshney/Weather app/code.html" class="w" target="_blank">
+            <a href="./Anikate Agrawal2/Weather app/code.html" class="w" target="_blank">
                 <main>
                     <div class="quiz"><img src="./Anikate Agrawal/images/weather.png" alt="Weather App Image" height="100%" width="100%">
                     </div>
@@ -283,14 +275,12 @@
             <div class="students">
             <div class="list1">
                 <ul>
-                    <li><p>Divyanshi Varshney</p><p>201500233</p></li>
                     <li><p>Anikate Agrawal</p><p>201500088</p></li>
                     <li><p>Aastha Goyal</p><p>201500004</p></li>
                 </ul>
             </div>
             <div class="list2">
                 <ul>
-                    <li><p>Chhaya Chaudhary</p><p>201500200</p></li>
                     <li><p>Gursha Agrawal</p><p>201500259</p></li>
                     <li><p>Disha Agrawal</p><p>201500225</p></li>
                 </ul>
